LU-3295 ptlrpc: cleanup recovery when unregistering service

during recovery, the last replay request will be queued for last
reply, which causes ASSERTION(list_empty(&service->srv_active_rqbds))
for these queued requests is not known for the service.

Change-Id: I0fcfd3d25cabad412f4b826ad06da46387538a1a
Signed-off-by: Hongchao Zhang <hongchao.zhang@intel.com>